--- a/_posts/2019-03-08-C++变量学习.md
+++ b/_posts/2019-03-08-C++变量学习.md
@@ -7,7 +7,7 @@ tags: C++ 变量  C++primer
 <span id="jump"></span>
 
 
-##  **变量定义**
+#  **变量定义**
 -----------------------------
 <br/>
 
@@ -17,7 +17,7 @@ tags: C++ 变量  C++primer
 <br/>
 <br/>
 -------------------------------
-## **变量声明与定义的关系** 
+# **变量声明与定义的关系** 
 --------------------------------
 <br/>
 ### 为了允许把程序拆分成多个逻辑部分来编写，C++语言支持分离式编译机制，该机制允许将程序分隔为若干个文件，每个文件可被独立编译。为了支持分离式编译，C++语言将声明和定义区别开来   
@@ -35,7 +35,7 @@ extern double pi=3.1416;//定义
 ```
  <br/>
 ---------------------------------
-## **标识符**  
+# **标识符**  
 ------------------------------------
 <br/>
 
@@ -51,7 +51,7 @@ extern double pi=3.1416;//定义
 <br/>
   
 ----------------------------------------
-## 名字的作用域
+# 名字的作用域
 ----------------------------------------
   
   
@@ -68,7 +68,7 @@ extern double pi=3.1416;//定义
 <br/>
 <br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/>  
-##<center>[回到顶部](#jump)<center/>
+##<center>[回到顶部](#变量定义)<center/>
 <br/>
 
->#*<center>The End*
+># **<center>The End<center> **
