--- a/_posts/2019-03-08-C++变量学习.md
+++ b/_posts/2019-03-08-C++变量学习.md
@@ -71,4 +71,4 @@ extern double pi=3.1416;//定义
 ##<center>[回到顶部](#变量定义)<center/>
 <br/>
 
-># **<center>The End<center> **
+># *<center>The End<center> *
